buildscript {
    repositories {
        maven { url = 'https://maven.minecraftforge.net/' }
        mavenCentral()
    }
    dependencies {
        classpath 'net.minecraftforge.gradle:ForgeGradle:5.1.+'
    }
}

apply plugin: 'net.minecraftforge.gradle'

group = project.group
version = project.mod_version
archivesBaseName = project.mod_id

sourceCompatibility = JavaVersion.VERSION_1_8
targetCompatibility = JavaVersion.VERSION_1_8

minecraft {
    mappings channel: 'stable', version: project.minecraft_mappings

    runs {
        client {
            workingDirectory project.file('run')
            property 'forge.logging.markers', 'REGISTRIES'
            property 'forge.logging.console.level', 'debug'
            mods {
                opensockets {
                    source sourceSets.main
                }
            }
        }
        server {
            workingDirectory project.file('run')
            property 'forge.logging.markers', 'REGISTRIES'
            property 'forge.logging.console.level', 'debug'
            mods {
                opensockets {
                    source sourceSets.main
                }
            }
        }
    }
}

repositories {
    maven {
        name = 'MightyPirates'
        url = 'https://maven.cil.li/'
        metadataSources {
            mavenPom()
            artifact()
        }
    }
    maven {
        name = 'CurseMaven'
        url = 'https://www.cursemaven.com'
    }
}

dependencies {
    minecraft "net.minecraftforge:forge:${project.minecraft_version}-${project.forge_version}"

    def localOcJar = providers.gradleProperty('opensockets_oc_jar')
    if (localOcJar.isPresent()) {
        compileOnly fg.deobf(files(localOcJar.get()))
        runtimeOnly fg.deobf(files(localOcJar.get()))
    } else {
        def oc = project.opencomputers_dependency
        compileOnly fg.deobf(oc)
        runtimeOnly fg.deobf(oc)
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

processResources {
    inputs.property 'version', project.version
    filesMatching('mcmod.info') {
        expand version: project.version
    }
}

jar {
    manifest {
        attributes([
                'Specification-Title'     : project.mod_name,
                'Specification-Vendor'    : project.mod_author,
                'Specification-Version'   : '1',
                'Implementation-Title'    : project.mod_name,
                'Implementation-Version'  : project.version,
                'Implementation-Vendor'   : project.mod_author
        ])
    }
}
